<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"><ImageView android:id="@+id/ImageView01" android:layout_height="wrap_content" android:src="@drawable/ccbanner" android:layout_width="fill_parent" android:paddingLeft="20px" android:layout_marginRight="20px" android:paddingTop="20px" android:paddingBottom="20px" android:scaleType="fitStart" android:maxHeight="135px" android:maxWidth="663px"></ImageView><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_gravity="bottom" android:layout_width="fill_parent" android:orientation="vertical"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/str_version" android:textAppearance="@style/VersionIdText"></TextView><Button android:layout_height="wrap_content" android:id="@+id/login_button" android:layout_width="fill_parent" android:layout_gravity="bottom" android:nextFocusUp="@+id/edit_password"></Button></LinearLayout><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="wrap_content" android:layout_gravity="center" android:paddingLeft="40px" android:paddingRight="40px"><TextView android:text="@+id/TextView02" android:layout_height="wrap_content" android:id="@+id/text_username" android:layout_width="fill_parent" android:gravity="left"></TextView><EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/edit_username" android:nextFocusDown="@+id/edit_password" android:inputType="textVisiblePassword"></EditText><TextView android:text="@+id/TextView03" android:layout_height="wrap_content" android:id="@+id/text_password" android:layout_width="fill_parent" android:gravity="left|center_horizontal"></TextView><EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_width="fill_parent" android:id="@+id/edit_password" android:nextFocusUp="@+id/edit_username" android:nextFocusDown="@+id/checkserver"></EditText>
</LinearLayout>










</FrameLayout>
