...
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageButton
            android:id="@+id/screen_multimedia_inflater_filefetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_menu_archive"
            android:layout_alignParentEnd="true" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/screen_multimedia_inflater_frame_location"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_multimedia_inflater_install"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:paddingVertical="8dp"
...
