...

    <string name="hello_world">Please enter your issues below</string>
    <string name="menu_settings">Settings</string>
    <string name="permission_content_provider_label">Read Secure CommCare Data</string>
    <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
...
    <string name="about_cc" cc:translatable="true">About CommCare</string>
    <string name="accept_location" cc:translatable="true">Record Location</string>
    <string name="install_barcode_top">Welcome to CommCare!</string>
    <string name="install_barcode_bottom">Please choose an installation method below</string>

...
    <string name="install_wrong_code">The app code you have entered is incorrect. Please try scanning barcode or entering correct code.</string>
    <string name="install_invalid_launch">Invalid CommCare launch, External applications should use a VIEW action to launch CommCare.</string>
    <string name="menu_archive">Offline Install</string>
    <string name="menu_sms">SMS Install</string>
    <string name="menu_sms_not_found">Install link not found in your texts!</string>
...
    <!-- Start Collect Strings -->

    <string name="cancel" cc:translatable="true">CANCEL</string>
    <string name="cancel_location" cc:translatable="true">Cancel</string>
    <string name="start_recording" cc:translatable="true">Start recording</string>
...
    <string name="playback_start_time">00:00</string>
    <string name="dependency_missing_dialog_title" cc:translatable="true">Get Required App</string>
    <string name="dependency_missing_dialog_title_plural" cc:translatable="true">Get Required Apps</string>
    <string name="dependency_missing_dialog_message" cc:translatable="true">CommCare needs %s application to be installed on your device before you can continue</string>
    <string name="dependency_missing_dialog_message_plural" cc:translatable="true">CommCare needs below applications to be installed on your device before you can continue-</string>
...
    <string name="connect_offline">Offline</string>
    <string name="connect_back_online">Back Online</string>
    <string name="connect_never">Never</string>
    <string name="connect_title">Connect</string>
    <string name="connect_no_jobs">You haven’t been invited to any opportunities yet. Once you’ve been invited to an opportunity, it will appear in this list.</string>
...
    <string name="connect_learn_cta_complete_assessment">Complete assessment</string>
    <string name="connect_learn_cta_take_assessment">Take assessment</string>
    <string name="connect_learn_cta_start">Start</string>

    <string name="connect_delivery_go">Go To App</string>
...
    <string-array name="frequency_vals_labels">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_enabled_vals">
...
    </string-array>
    <string-array name="pref_enabled_labels">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_password_show_options_labels">
...
