<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/pref_dialog_margin_bottom"
    android:layout_marginTop="@dimen/pref_dialog_margin_top"
    android:overScrollMode="ifContentScrolls"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/pref_dialog_content_padding">

        <TextView
            android:id="@android:id/message"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pref_dialog_message_margin_bottom"
            android:textColor="?android:attr/textColorSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@android:id/edit"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/display_field"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/filefetch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_menu_archive"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>